# discu-bot

./: .gitignore  Dockerfile  docker-compose.yml  example.env  pyproject.toml  readme.md  start-bot.sh
backend/: alembic.ini  bot.py  config.py  main.py  models.py  prestart.sh  schema.py
backend/alembic/: env.py
backend/alembic/versions/: fbcc3fd13169_.py
faster-front/: Dockerfile  README.md  angular.json  custom-webpack.config.js  karma.conf.js  nginx.conf  package-lock.json  package.json  tsconfig.json
faster-front/e2e/src/: app.e2e-spec.ts
faster-front/src/: index.html  polyfills.ts  styles.css  typing.d.ts
faster-front/src/app/: app-routing.module.ts  app.component.spec.ts  app.component.ts  app.module.ts  author.ts  channel.service.ts  channel.ts  discussion.ts  message.ts
faster-front/src/app/channels/: channels.component.html  channels.component.ts
faster-front/src/app/discussiondetail/: discussiondetail.component.html  discussiondetail.component.spec.ts  discussiondetail.component.ts
faster-front/src/app/discussionlist/: discussionlist.component.html  discussionlist.component.spec.ts  discussionlist.component.ts
faster-front/src/environments/: environment.prod.ts  environment.ts
